// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts/Line Chart/Radial/Axis Custom smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="500"
     style="height: 500px; width: 500px;"
>
  <svg width="500"
       height="500"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(250, 250)">
      <path d="M-0.071,-0.071A0.1,0.1,0,0,1,0.071,-0.071A0.1,0.1,0,0,0,-0.071,-0.071Z M -0.071,-0.071 L 0,0 M 0.071,-0.071 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-24.805,-24.805A35.08,35.08,0,0,1,24.805,-24.805A35.08,35.08,0,0,0,-24.805,-24.805Z M -24.805,-24.805 L 0,0 M 24.805,-24.805 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-49.54,-49.54A70.06,70.06,0,0,1,49.54,-49.54A70.06,70.06,0,0,0,-49.54,-49.54Z M -49.54,-49.54 L 0,0 M 49.54,-49.54 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-74.274,-74.274A105.04,105.04,0,0,1,74.274,-74.274A105.04,105.04,0,0,0,-74.274,-74.274Z M -74.274,-74.274 L 0,0 M 74.274,-74.274 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-99.009,-99.009A140.02,140.02,0,0,1,99.009,-99.009A140.02,140.02,0,0,0,-99.009,-99.009Z M -99.009,-99.009 L 0,0 M 99.009,-99.009 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-123.744,-123.744A175,175,0,0,1,123.744,-123.744A175,175,0,0,0,-123.744,-123.744Z M -123.744,-123.744 L 0,0 M 123.744,-123.744 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <g transform="rotate(-124.74489795918367) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(124.74489795918367, 15, 0)">
          <title>
            1/19/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-0.7853981633974483"
                endangle="0.7853981633974483"
          >
            1/19/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-111.88775510204081) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(111.88775510204081, 15, 0)">
          <title>
            1/26/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-0.7853981633974483"
                endangle="0.7853981633974483"
          >
            1/26/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-99.03061224489797) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(99.03061224489797, 15, 0)">
          <title>
            2/2/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-0.7853981633974483"
                endangle="0.7853981633974483"
          >
            2/2/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-86.1734693877551) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(86.1734693877551, 15, 0)">
          <title>
            2/9/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="middle"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-0.7853981633974483"
                endangle="0.7853981633974483"
          >
            2/9/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-73.31632653061223) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(73.31632653061223, 15, 0)">
          <title>
            2/16/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-0.7853981633974483"
                endangle="0.7853981633974483"
          >
            2/16/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-60.4591836734694) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(60.4591836734694, 15, 0)">
          <title>
            2/23/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-0.7853981633974483"
                endangle="0.7853981633974483"
          >
            2/23/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-47.60204081632652) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(47.60204081632652, 15, 0)">
          <title>
            3/1/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-0.7853981633974483"
                endangle="0.7853981633974483"
          >
            3/1/2020
          </text>
        </g>
      </g>
      <g>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <path d="M-123.744,-123.744A175,175,0,0,1,123.744,-123.744L0.071,-0.071A0.1,0.1,0,0,0,-0.071,-0.071Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <g clip-path="url(#ref-5-path)">
          <path pointer-events="none"
                stroke="#2d60e8"
                fill="none"
                stroke-width="2"
                d="M-70,-70C-70,-70,-114.533,-120.679,-112.302,-119.743C-110.07,-118.806,-61.955,-68.107,-56.613,-64.381C-51.272,-60.656,-73.553,-87.208,-80.252,-97.389C-86.951,-107.569,-98.112,-124.972,-96.805,-125.464C-95.499,-125.956,-77.254,-104.497,-72.413,-100.343C-67.573,-96.189,-69.307,-100.514,-67.763,-100.54C-66.218,-100.565,-63.828,-99.097,-63.147,-100.498C-62.467,-101.9,-65.194,-109.082,-63.68,-108.949C-62.166,-108.815,-54.216,-96.999,-54.063,-99.698C-53.909,-102.398,-66.031,-129.343,-62.758,-125.146C-59.485,-120.949,-35.641,-73.555,-34.424,-74.515C-33.208,-75.475,-58.62,-136.663,-55.457,-130.908C-52.294,-125.154,-21.086,-51.503,-15.447,-39.986C-9.809,-28.469,-20.703,-57.339,-21.626,-61.805C-22.55,-66.27,-21.264,-65.162,-20.99,-66.779C-20.716,-68.396,-20.881,-72.038,-19.982,-71.507C-19.082,-70.976,-16.362,-63.407,-15.592,-63.596C-14.821,-63.785,-12.842,-54.525,-15.359,-72.64C-17.876,-90.755,-30.67,-166.601,-30.695,-172.287C-30.72,-177.973,-17.424,-107.074,-15.508,-106.757C-13.592,-106.44,-20.504,-172.255,-19.198,-170.386C-17.892,-168.517,-9.588,-97.241,-7.674,-95.544C-5.759,-93.847,-8.632,-153.919,-7.709,-160.205C-6.787,-166.491,-3.839,-133.876,-2.136,-133.259C-0.433,-132.642,0.997,-154.691,2.509,-156.505C4.021,-158.318,6.694,-162.003,6.936,-144.142C7.179,-126.281,2.856,-53.282,3.963,-49.339C5.069,-45.395,13.642,-124.622,13.575,-120.481C13.508,-116.34,1.54,-20.548,3.558,-24.492C5.576,-28.436,21.924,-127.65,25.682,-144.146C29.439,-160.641,27.608,-136.158,26.105,-123.465C24.603,-110.771,14.939,-66.805,16.668,-67.987C18.398,-69.168,36.494,-133.085,36.481,-130.553C36.469,-128.021,18.821,-63.54,16.594,-52.793C14.367,-42.047,24.399,-71.023,23.12,-66.072C21.84,-61.121,3.118,-11.31,8.919,-23.086C14.719,-34.862,50.76,-121.854,57.923,-136.729C65.086,-151.604,50.769,-113.624,51.897,-112.335C53.024,-111.047,60.596,-124.221,64.689,-128.997C68.782,-133.774,74.407,-140.542,76.456,-140.994C78.506,-141.447,79.204,-138.462,76.986,-131.713C74.767,-124.963,68.688,-111.634,63.147,-100.498C57.606,-89.363,44.61,-68.269,43.741,-64.898C42.871,-61.527,52.373,-74.439,57.931,-80.275C63.489,-86.11,69.148,-91.936,77.089,-99.911C85.031,-107.886,101.417,-125.431,105.579,-128.124C109.741,-130.816,102.263,-118.872,102.061,-116.065C101.858,-113.258,109.349,-118.598,104.364,-111.279C99.38,-103.961,72.154,-72.154,72.154,-72.154"
                opacity="1"
          >
          </path>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 13 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 16"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-69.9619px) translateY(-69.9619px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 14 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 44"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-112.238px) translateY(-119.675px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 15 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 12"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-56.5792px) translateY(-64.3426px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 16 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-80.2019px) translateY(-97.3283px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 17 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 41"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-96.7418px) translateY(-125.382px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Jan 18 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 25"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-72.3635px) translateY(-100.275px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Jan 19 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 24"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-67.7145px) translateY(-100.468px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 20 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 23"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-63.0997px) translateY(-100.423px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 21 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-63.6301px) translateY(-108.864px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 22 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 21"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-54.0186px) translateY(-99.6165px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 23 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 32"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-62.7041px) translateY(-125.039px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 24 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 11"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-34.3929px) translateY(-74.4482px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Jan 25 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 33"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-55.4049px) translateY(-130.786px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Jan 26 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 3"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-15.4315px) translateY(-39.9466px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 27 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 7"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-21.6035px) translateY(-61.7415px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 28 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-20.9671px) translateY(-66.7073px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 29 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 9"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-19.9592px) translateY(-71.4267px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 30 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 7"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-15.5733px) translateY(-63.5212px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 31 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 9"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-15.3397px) translateY(-72.5507px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 01 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 50"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-30.6552px) translateY(-172.066px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 02 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 19"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-15.4867px) translateY(-106.614px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 03 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 48"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-19.1705px) translateY(-170.147px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 04 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 15"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-7.66212px) translateY(-95.4036px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 05 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 42"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-7.69652px) translateY(-159.959px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 06 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 29"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-2.136px) translateY(-133.045px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 07 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 40"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(2.509px) translateY(-156.242px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 08 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(6.92464px) translateY(-143.889px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 09 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 4"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(3.963px) translateY(-49.248px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 10 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 24"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(13.5499px) translateY(-120.25px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 11 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 1"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(3.558px) translateY(-24.4422px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 12 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 35"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(25.6292px) translateY(-143.843px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 13 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(26.0488px) translateY(-123.194px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 14 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(16.6309px) translateY(-67.8305px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 15 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 30"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(36.394px) translateY(-130.237px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 16 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 5"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(16.5533px) translateY(-52.6587px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 17 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(23.0602px) translateY(-65.8965px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 18 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 1"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(8.89569px) translateY(-23.0213px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 19 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 36"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(57.7571px) translateY(-136.333px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 20 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 25"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(51.7418px) translateY(-111.995px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 21 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(64.4864px) translateY(-128.589px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 22 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 42"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(76.2053px) translateY(-140.528px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 23 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 38"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(76.7222px) translateY(-131.257px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 24 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 23"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(62.9211px) translateY(-100.134px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 25 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 10"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(43.578px) translateY(-64.652px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 26 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 16"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(57.7048px) translateY(-79.9573px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 27 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(76.7736px) translateY(-99.4981px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 28 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 45"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(105.127px) translateY(-127.571px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 29 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 39"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(101.604px) translateY(-115.541px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Mar 01 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 38"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(103.876px) translateY(-110.754px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Mar 02 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 17"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(71.802px) translateY(-71.7977px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Line Chart/Radial/Axis SemiCircle smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="500"
     style="height: 500px; width: 500px;"
>
  <svg width="500"
       height="500"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(250, 250)">
      <path d="M-0.1,0A0.1,0.1,0,1,1,0.1,0A0.1,0.1,0,1,0,-0.1,0Z M -0.1,0 L 0,0 M 0.1,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-35.08,0A35.08,35.08,0,1,1,35.08,0A35.08,35.08,0,1,0,-35.08,0Z M -35.08,0 L 0,0 M 35.08,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-70.06,0A70.06,70.06,0,1,1,70.06,0A70.06,70.06,0,1,0,-70.06,0Z M -70.06,0 L 0,0 M 70.06,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-105.04,0A105.04,105.04,0,1,1,105.04,0A105.04,105.04,0,1,0,-105.04,0Z M -105.04,0 L 0,0 M 105.04,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-140.02,0A140.02,140.02,0,1,1,140.02,0A140.02,140.02,0,1,0,-140.02,0Z M -140.02,0 L 0,0 M 140.02,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-175,0A175,175,0,1,1,175,0A175,175,0,1,0,-175,0Z M -175,0 L 0,0 M 175,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <g transform="rotate(-159.48979591836735) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(159.48979591836735, 15, 0)">
          <title>
            1/19/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            1/19/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-133.77551020408163) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(133.77551020408163, 15, 0)">
          <title>
            1/26/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            1/26/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-108.06122448979593) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(108.06122448979593, 15, 0)">
          <title>
            2/2/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            2/2/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-82.34693877551021) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(82.34693877551021, 15, 0)">
          <title>
            2/9/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            2/9/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-56.632653061224474) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(56.632653061224474, 15, 0)">
          <title>
            2/16/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            2/16/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-30.918367346938794) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(30.918367346938794, 15, 0)">
          <title>
            2/23/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            2/23/2020
          </text>
        </g>
      </g>
      <g transform="rotate(-5.204081632653043) translate(175,0)">
        <line x1="10"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(5.204081632653043, 15, 0)">
          <title>
            3/1/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            3/1/2020
          </text>
        </g>
      </g>
      <g>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <path d="M-175,0A175,175,0,1,1,175,0L0.1,0A0.1,0.1,0,1,0,-0.1,0Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <g clip-path="url(#ref-1-path)">
          <path pointer-events="none"
                stroke="#2d60e8"
                fill="none"
                stroke-width="2"
                d="M-163.827,-10.518C-161.499,-12.345,-91.688,-8.696,-85.028,-10.963C-78.368,-13.231,-112.491,-19.251,-123.867,-24.123C-135.244,-28.995,-154.358,-37.718,-153.286,-40.196C-152.215,-42.675,-124.257,-38.109,-117.44,-38.993C-110.622,-39.876,-114.133,-43.414,-112.383,-45.499C-110.632,-47.583,-107.341,-48.76,-106.937,-51.498C-106.532,-54.236,-111.937,-60.197,-109.955,-61.926C-107.974,-63.655,-94.676,-58.236,-95.05,-61.871C-95.424,-65.506,-117.623,-85.179,-112.198,-83.735C-106.773,-82.292,-64.18,-50.68,-62.501,-53.208C-60.823,-55.736,-107.742,-102.485,-102.128,-98.906C-96.515,-95.326,-39.036,-39.685,-28.819,-31.733C-18.602,-23.781,-38.954,-46.914,-40.826,-51.194C-42.697,-55.473,-40.438,-55.363,-40.048,-57.412C-39.659,-59.462,-40.116,-63.384,-38.489,-63.491C-36.862,-63.598,-31.692,-57.32,-30.287,-58.054C-28.881,-58.787,-25.028,-50.195,-30.054,-67.892C-35.079,-85.588,-60.332,-158.311,-60.439,-164.232C-60.546,-170.153,-34.408,-102.93,-30.694,-103.418C-26.98,-103.907,-40.72,-168.631,-38.154,-167.165C-35.588,-165.699,-19.09,-95.876,-15.298,-94.623C-11.506,-93.37,-17.239,-153.218,-15.401,-159.649C-13.563,-166.08,-7.675,-133.742,-4.272,-133.208C-0.869,-132.673,1.995,-154.705,5.017,-156.444C8.038,-158.183,13.376,-161.572,13.857,-143.642C14.337,-125.712,5.713,-53.103,7.9,-48.863C10.087,-44.623,27.122,-122.393,26.979,-118.204C26.836,-114.014,3.11,-20.526,7.042,-23.726C10.973,-26.926,43.227,-122.128,50.567,-137.406C57.907,-152.684,54.113,-127.951,51.081,-115.394C48.05,-102.836,29.18,-61.975,32.378,-62.062C35.576,-62.149,70.39,-118.697,70.27,-115.918C70.151,-113.139,36.099,-55.587,31.661,-45.388C27.223,-35.19,46.148,-59.239,43.644,-54.728C41.141,-50.217,6.135,-10.225,16.639,-18.321C27.143,-26.417,93.739,-92.988,106.669,-103.304C119.6,-113.619,92.727,-83.046,94.224,-80.214C95.721,-77.382,108.951,-85.099,115.651,-86.313C122.35,-87.527,131.541,-89.406,134.421,-87.498C137.301,-85.59,137.51,-80.865,132.93,-74.865C128.349,-68.865,117.001,-59.081,106.937,-51.498C96.872,-43.915,74.707,-32.753,72.543,-29.369C70.379,-25.985,85.698,-30.754,93.952,-31.194C102.206,-31.634,110.566,-31.919,122.067,-32.01C133.568,-32.1,157.755,-33.777,162.958,-31.736C168.161,-29.695,155.072,-23.424,153.287,-19.764C151.502,-16.104,160.789,-13.069,152.248,-9.775C143.707,-6.481,143.916,-1.629,102.042,0C60.168,1.629,-54.683,1.753,-98.995,0C-143.306,-1.753,-166.155,-8.691,-163.827,-10.518"
                opacity="1"
          >
          </path>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 13 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 16"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-98.995px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 14 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 44"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-163.827px) translateY(-10.518px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 15 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 12"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-85.028px) translateY(-10.963px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 16 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-123.867px) translateY(-24.123px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 17 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 41"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-153.286px) translateY(-40.196px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Jan 18 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 25"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-117.44px) translateY(-38.993px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Jan 19 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 24"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-112.383px) translateY(-45.499px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 20 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 23"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-106.937px) translateY(-51.498px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 21 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-109.955px) translateY(-61.926px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 22 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 21"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-95.05px) translateY(-61.871px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 23 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 32"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-112.198px) translateY(-83.735px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 24 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 11"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-62.501px) translateY(-53.208px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Jan 25 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 33"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-102.128px) translateY(-98.906px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Jan 26 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 3"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-28.819px) translateY(-31.733px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 27 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 7"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-40.826px) translateY(-51.194px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 28 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-40.048px) translateY(-57.412px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 29 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 9"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-38.489px) translateY(-63.491px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 30 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 7"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-30.287px) translateY(-58.054px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 31 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 9"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-30.054px) translateY(-67.892px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 01 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 50"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-60.439px) translateY(-164.232px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 02 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 19"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-30.694px) translateY(-103.418px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 03 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 48"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-38.154px) translateY(-167.165px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 04 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 15"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-15.298px) translateY(-94.623px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 05 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 42"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-15.401px) translateY(-159.649px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 06 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 29"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-4.272px) translateY(-133.208px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 07 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 40"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(5.017px) translateY(-156.444px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 08 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(13.857px) translateY(-143.642px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 09 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 4"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(7.9px) translateY(-48.863px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 10 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 24"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(26.979px) translateY(-118.204px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 11 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 1"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(7.042px) translateY(-23.726px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 12 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 35"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(50.567px) translateY(-137.406px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 13 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(51.081px) translateY(-115.394px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 14 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(32.378px) translateY(-62.062px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 15 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 30"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(70.27px) translateY(-115.918px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 16 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 5"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(31.661px) translateY(-45.388px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 17 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(43.644px) translateY(-54.728px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 18 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 1"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(16.639px) translateY(-18.321px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 19 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 36"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(106.669px) translateY(-103.304px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 20 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 25"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(94.224px) translateY(-80.214px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 21 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(115.651px) translateY(-86.313px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 22 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 42"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(134.421px) translateY(-87.498px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 23 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 38"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(132.93px) translateY(-74.865px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 24 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 23"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(106.937px) translateY(-51.498px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 25 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 10"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(72.543px) translateY(-29.369px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 26 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 16"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(93.952px) translateY(-31.194px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 27 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(122.067px) translateY(-32.01px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 28 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 45"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(162.947px) translateY(-31.736px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 29 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 39"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(153.276px) translateY(-19.764px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Mar 01 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 38"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(152.237px) translateY(-9.775px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Mar 02 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 17"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(102.042px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Line Chart/Radial/Axis SemiCircleMultiSeries smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="500"
     style="height: 500px; width: 500px;"
>
  <svg width="500"
       height="500"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(250, 250)">
      <path d="M-0.1,0A0.1,0.1,0,1,1,0.1,0A0.1,0.1,0,1,0,-0.1,0Z M -0.1,0 L 0,0 M 0.1,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-14.675,0A14.675,14.675,0,1,1,14.675,0A14.675,14.675,0,1,0,-14.675,0Z M -14.675,0 L 0,0 M 14.675,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-29.25,0A29.25,29.25,0,1,1,29.25,0A29.25,29.25,0,1,0,-29.25,0Z M -29.25,0 L 0,0 M 29.25,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-43.825,0A43.825,43.825,0,1,1,43.825,0A43.825,43.825,0,1,0,-43.825,0Z M -43.825,0 L 0,0 M 43.825,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-58.4,0A58.4,58.4,0,1,1,58.4,0A58.4,58.4,0,1,0,-58.4,0Z M -58.4,0 L 0,0 M 58.4,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-72.975,0A72.975,72.975,0,1,1,72.975,0A72.975,72.975,0,1,0,-72.975,0Z M -72.975,0 L 0,0 M 72.975,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-87.55,0A87.55,87.55,0,1,1,87.55,0A87.55,87.55,0,1,0,-87.55,0Z M -87.55,0 L 0,0 M 87.55,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-102.125,0A102.125,102.125,0,1,1,102.125,0A102.125,102.125,0,1,0,-102.125,0Z M -102.125,0 L 0,0 M 102.125,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-116.7,0A116.7,116.7,0,1,1,116.7,0A116.7,116.7,0,1,0,-116.7,0Z M -116.7,0 L 0,0 M 116.7,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-131.275,0A131.275,131.275,0,1,1,131.275,0A131.275,131.275,0,1,0,-131.275,0Z M -131.275,0 L 0,0 M 131.275,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-145.85,0A145.85,145.85,0,1,1,145.85,0A145.85,145.85,0,1,0,-145.85,0Z M -145.85,0 L 0,0 M 145.85,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-160.425,0A160.425,160.425,0,1,1,160.425,0A160.425,160.425,0,1,0,-160.425,0Z M -160.425,0 L 0,0 M 160.425,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <path d="M-175,0A175,175,0,1,1,175,0A175,175,0,1,0,-175,0Z M -175,0 L 0,0 M 175,0 L 0,0"
            fill="none"
            stroke-dasharray="1,4"
            stroke="#71808d"
            style="pointer-events: none;"
      >
      </path>
      <g transform="rotate(-180) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(180, 15, 0)">
          <title>
            XML
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            XML
          </text>
        </g>
      </g>
      <g transform="rotate(-120) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(120, 15, 0)">
          <title>
            JSON
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            JSON
          </text>
        </g>
      </g>
      <g transform="rotate(-60.00000000000001) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(60.00000000000001, 15, 0)">
          <title>
            HTTPS
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            HTTPS
          </text>
        </g>
      </g>
      <g transform="rotate(0) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(0, 15, 0)">
          <title>
            SSH
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="-1.5707963267948966"
                endangle="1.5707963267948966"
          >
            SSH
          </text>
        </g>
      </g>
      <g>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <path d="M-175,0A175,175,0,1,1,175,0L0.1,0A0.1,0.1,0,1,0,-0.1,0Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <g clip-path="url(#ref-3-path)">
          <path pointer-events="none"
                stroke="#2aa1d1"
                fill="none"
                stroke-width="2"
                d="M-123.744,0L-36.077,-62.488L29.021,-50.265L130.372,0Z"
                opacity="1"
          >
          </path>
          <path pointer-events="none"
                stroke="#2b8dd8"
                fill="none"
                stroke-width="2"
                d="M-103.531,0L-70.545,-122.187L64.892,-112.396L132.7,0Z"
                opacity="1"
          >
          </path>
          <path pointer-events="none"
                stroke="#2c77e0"
                fill="none"
                stroke-width="2"
                d="M-123.744,0L-67.777,-117.394L75.777,-131.25L130.958,0Z"
                opacity="1"
          >
          </path>
          <path pointer-events="none"
                stroke="#2d60e8"
                fill="none"
                stroke-width="2"
                d="M-141.09,0L-67.777,-117.394L87.5,-151.554L156.525,0Z"
                opacity="1"
          >
          </path>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Discovery: 100"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-123.678px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Discovery: 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-36.0567px) translateY(-62.453px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Discovery: 22"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(29.0044px) translateY(-50.2355px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Discovery: 111"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(130.293px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Exploitation: 70"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-103.475px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Exploitation: 130"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-70.5051px) translateY(-122.118px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Exploitation: 110"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(64.8541px) translateY(-112.33px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Exploitation: 115"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(132.619px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Lateral Movement: 100"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-123.677px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Lateral Movement: 120"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-67.7387px) translateY(-117.328px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Lateral Movement: 150"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(75.7327px) translateY(-131.173px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Lateral Movement: 112"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(130.878px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Threat Intelligence: 130"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-141.014px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Threat Intelligence: 120"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-67.7387px) translateY(-117.328px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Threat Intelligence: 200"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(87.4488px) translateY(-151.465px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Threat Intelligence: 160"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(156.429px) translateY(0px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;
